# ZIA_MART

Main_Folder/: compose.yml
Main_Folder/Inventory_service/: .env  Dockerfile  pyproject.toml
Main_Folder/Inventory_service/inventory_service/: crud.py  db.py  kafka_utils.py  main.py  models.py  order.proto  order_pb2.py  product.proto  product_pb2.py  setting.py
Main_Folder/Notification_service/: .env  Dockerfile  pyproject.toml
Main_Folder/Notification_service/notification_service/: crud.py  db.py  kafka_utils.py  main.py  models.py  order.proto  order_pb2.py  payment.proto  setting.py
Main_Folder/Order_service/: .env  Dockerfile  pyproject.toml
Main_Folder/Order_service/order_service/: crud.py  db.py  kafka_utilts.py  main.py  models.py  order.proto  order_pb2.py  schemas.py  setting.py
Main_Folder/Payment_service/: .env  Dockerfile  pyproject.toml
Main_Folder/Payment_service/payment_service/: crud.py  db.py  kafka_utils.py  main.py  models.py  order.proto  payment.proto  payment_pb2.py  setting.py
Main_Folder/Product_service/: .env  Dockerfile  pyproject.toml
Main_Folder/Product_service/product_service/: crud.py  db.py  kafka_utils.py  main.py  models.py  product.proto  schemas.py  setting.py
Main_Folder/User_service/: .env  Dockerfile  README.md  pyproject.toml
Main_Folder/User_service/user_service/: auth.py  db.py  main.py  models.py  register.py  schemas.py  settings.py
Main_Folder/User_service/user_service/routes/: auth_route.py  register_route.py  user_route.py
kong.config/: compose.yml  register_routes.sh
